--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "my-react-app",
-  "version": "1.0.0",
+  "version": "1.0.0", // Correct: Double quotes around the version
   "private": true,
   "dependencies": {
-    "react": "^18.2.0", // Updated to a more recent 18.x version
-    "react-dom": "^18.2.0", // Updated to a more recent 18.x version
-    "lucide-react": "^0.298.0" // Updated to a more recent version
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "lucide-react": "^0.298.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -13,10 +13,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "devDependencies": { // Added devDependencies for react-scripts
-    "react-scripts": "^5.0.1" // Updated to a more recent version
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   },
-    "browserslist": { // Recommended for better browser compatibility
+  "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
