--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.298.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "axios": "^0.27.2"  // Added axios
   },
   "scripts": {
     "start": "react-scripts start",
